--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
-    "name": "modi/playii",
+    "name": "lhjx/playii",
     "type": "project",
     "require": {
         "php": ">=7.1.0",
-        "yiisoft/yii2": "~2.0.0"
+        "yiisoft/yii2": "~2.0.15"
     },
     "require-dev": {
-        "phpunit/phpunit": "~6.0"
+        "phpunit/phpunit": "^6"
     },
     "license": "GPL-3.0+",
     "authors": [
@@ -29,7 +29,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Playii\\Tests\\": "tests/"
+            "Tests\\": "tests/"
         }
     }
 }
